# SlimeSimulation

./: Cargo.toml  README.md  slime_simulation_config.toml
assets/shaders/: blur.wgsl  fade.wgsl  flow.wgsl  recolor.wgsl  simulation.wgsl
src/: main.rs  pipeline.rs  plugin.rs
src/pipeline/: blur.rs  fade.rs  mod.rs  recolor.rs  simulation.rs
