[package]
name = "slime_simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.1"
bevy_embedded_assets = "0.4.0"
bevy-inspector-egui = "0.13.0"
bevy-inspector-egui-derive = "0.13.0"
bytemuck = "1.12.2"
rand = "0.8.5"
serde = { version = "1.0.159", features = ["derive"] }
toml = "0.7.3"
